layout bugfix

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 .App{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background: #010920;
+    min-height: 100vh;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Montserrat', sans-serif;
 }
